# igus-coffee-moveit

./: .gitignore  README.md  simattack2_jointstate.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/igus_rebel/lib/igus_rebel/: random_pose_node
install/igus_rebel/share/igus_rebel/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/igus_rebel/share/igus_rebel/launch/: pick_and_place.launch.py
install/igus_rebel_description/share/igus_rebel_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/igus_rebel_description/share/igus_rebel_description/cmake/: igus_rebel_descriptionConfig.cmake
install/igus_rebel_description/share/igus_rebel_description/urdf/: igus_rebel2.control.xacro  igus_rebel2.urdf  igus_rebel_robot2.urdf.xacro  igus_robt.urdf
install/igus_rebel_description/share/igus_rebel_description/urdf1/: igus_rebel.urdf
install/igus_rebel_moveit_config/share/igus_rebel_moveit_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/igus_rebel_moveit_config/share/igus_rebel_moveit_config/config/: gz_bridge.yaml  igus_rebel1.srdf  igus_rebel2.srdf  joint_limits.yaml  kinematics.yaml  ros_controllers.yaml
install/igus_rebel_moveit_config/share/igus_rebel_moveit_config/launch/: coffee_cell_environment.py  igus_rebel_simulated.launch.py  move_group.launch.py  moveit.rviz
install/igus_rebel_msgs/share/igus_rebel_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/modbus_ros/lib/modbus_ros/: modbus_publisher
install/modbus_ros/share/modbus_ros/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/moveit_task_constructor_capabilities/share/moveit_task_constructor_capabilities/: local_setup.sh  package.sh
install/moveit_task_constructor_core/share/moveit_task_constructor_core/: local_setup.sh  package.sh
install/moveit_task_constructor_demo/include/moveit_task_constructor_demo/: pick_place_demo_parameters.hpp
install/moveit_task_constructor_demo/share/moveit_task_constructor_demo/: package.sh
install/moveit_task_constructor_msgs/share/moveit_task_constructor_msgs/: package.sh
install/moveit_task_constructor_visualization/share/moveit_task_constructor_visualization/: package.sh
install/rviz_marker_tools/share/rviz_marker_tools/: local_setup.sh  package.sh
log/: latest_build
ros2_env/: pyvenv.cfg
simattack1/: metadata.yaml
simattack2/: metadata.yaml
src/igus_rebel_ros2/igus_rebel/: CMakeLists.txt  package.xml  rebel.xml
src/igus_rebel_ros2/igus_rebel/config/: controller.yaml
src/igus_rebel_ros2/igus_rebel/include/igus_rebel/: CriKeywords.hpp  CriMessages.hpp  Rebel.hpp  RebelSocket.hpp
src/igus_rebel_ros2/igus_rebel/launch/: rebel.launch.py
src/igus_rebel_ros2/igus_rebel/src/: CriMessages.cpp  Rebel.cpp  RebelSocket.cpp  end_effector_movement.cpp  igus_moveit.cpp  igus_rail_moveit.cpp  igus_rebel_pick_and_place.cpp  pick_and_place.cpp  random_poses.cpp
src/igus_rebel_ros2/igus_rebel_description/: CMakeLists.txt  package.xml
src/igus_rebel_ros2/igus_rebel_description/launch/: display.launch.archive  igus_rebel_robot.launch.archive
src/igus_rebel_ros2/igus_rebel_description/urdf/: igus_rebel.urdf  igus_rebel2.control.xacro  igus_rebel2.urdf  igus_rebel_robot.urdf.xacro  igus_rebel_ros1.urdf
src/igus_rebel_ros2/igus_rebel_description/urdf1/: igus_rebel.control.xacro  igus_rebel.urdf  igus_rebel_robot.urdf.xacro
src/igus_rebel_ros2/igus_rebel_moveit_config/: .setup_assistant  CMakeLists.txt
src/igus_rebel_ros2/igus_rebel_moveit_config/config/: fake_controllers.yaml.archive  igus_rebel2.srdf  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml
src/igus_rebel_ros2/igus_rebel_moveit_config/launch/: coffee_cell_environment.py  gazebo.launch.py  igus_rebel_motion_planner.launch.py  igus_rebel_simulated.launch.py  move_group.launch.py  moveit.rviz  moveit_rviz.launch.py  ros_controllers.launch.py
src/igus_rebel_ros2/igus_rebel_msgs/: CMakeLists.txt
src/igus_rebel_ros2/igus_rebel_msgs/msg/: DigitalOutput.msg
src/igus_rebel_ros2/igus_rebel_msgs/srv/: SetDigitalOutput.srv
src/modbus_ros/: package.xml  setup.cfg  setup.py
src/modbus_ros/modbus_ros/: modbus_publisher.py
(+80 files in other folders)
